--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@
 # Build outputs
 *.html
 *.pyc
+*common_theme_override.css
+*binary-features.rst
+build_options.py
+features.json.gz
+
 
 # static html pages
 !/frontend/*.html
